<resources>
    <string name="app_name">My App with kotlin</string>
    <string name="blank">  </string>
    <string name="bn1">Back</string>
    <string name="bn2">Send to next page</string>
    <string name="bn3">To this activity</string>
    <string name="bn4">Send broadcast message</string>
    <string name="bn5">Local Broadcast</string>
    <string name="bn6">Next Page</string>
    <string name="bn7">Bind Service</string>
    <string name="bn8">Unbind Service</string>
    <string name="bn9">Service Status</string>
    <string name="bn10">Normal Service</string>
    <string name="bn11">Intent Service</string>
    <string name="bn12">Start Service</string>
    <string name="bn13">End Service</string>
    <string name="bn14">Remote Service Info</string>
    <string name="bn15">Write</string>
    <string name="bn16">Read</string>
    <string name="bn17">Read File</string>
    <string name="bn18">Write File</string>
    <string name="bn19">Database Page</string>
    <string name="bn20">Insert</string>
    <string name="bn21">Content Provider</string>
    <string name="bn22">Query</string>
    <string name="bn23">Update</string>
    <string name="bn24">Delete</string>
    <string name="bn25">Add Info</string>
    <string name="bn26">Find Info</string>
    <string name="bn27">Delete last</string>
    <string name="bn28">Bundle Test</string>
    <string name="bn29">Register Now!</string>
    <string name="view1_hello">Hello</string>
    <string name="view2_world">world</string>
    <string name="view3">Colour: </string>
    <string name="view4">Weight: </string>
    <string name="view5">Enter an Integer</string>
    <string name="view6">Enter something …</string>
    <string name="view7">Read from the file …</string>
    <string name="view8">Title</string>
    <string name="view9">Content</string>
    <string name="view10">Name</string>
    <string name="view11">Grade</string>
    <string name="view12">Key</string>
    <string name="view13">Please fill in the form below to register yourself!</string>
    <string name="view14">Please supply your account name</string>
    <string name="view15">Please supply your password</string>
    <string name="radBtn1">Male</string>
    <string name="radBtn2">Female</string>
    <string name="radBtn3">Other</string>
</resources>
