<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/view13"
        android:textSize="20sp" />
    <!-- 定义一个EditText，用于收集用户的账号 -->
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/view14"
        android:selectAllOnFocus="true" />

    <!-- 用于收集用户的密码 -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/view15"
        android:selectAllOnFocus="true" />

    <!-- 定义一组单选钮，用于收集用户注册的性别 -->
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radBtn1"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radBtn2"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radBtn3"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/bnRegester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bn29"
        android:textSize="16sp"
        android:onClick="registerAccount"/>

    <Button
        android:id="@+id/bnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bn1"
        android:textSize="16sp"
        android:onClick="backToMain"/>
</LinearLayout>
