<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view1_hello" />
        <Button
            android:id="@+id/bn5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bn12"
            android:onClick="start"/>
        <Button
            android:id="@+id/bn6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bn13"
            android:onClick="end"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center|center_horizontal">

        <TextView
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view2_world" />

        <EditText
            android:id="@+id/editTextBox"
            android:layout_height="100dp"
            android:layout_width="match_parent"/>

        <Button
            android:id="@+id/bn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bn2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="bottom|center_horizontal">

        <Button
            android:id="@+id/bn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="reOpen"
            android:text="@string/bn3" />

        <Button
            android:id="@+id/bn9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toBundleTest"
            android:text="@string/bn28" />

        <Button
            android:id="@+id/bn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bn4"
            android:onClick="sendMsg"/>

        <Button
            android:id="@+id/bn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bn5"
            android:onClick="sendLocalMsg"/>
    </LinearLayout>

</LinearLayout>