<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top|center">
                <Button
                    android:id="@+id/btnInsert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bn20"
                    android:onClick="insertBtn"/>

                <Button
                    android:id="@+id/btnQuery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bn22"
                    android:onClick="queryBtn"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top|center">
                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bn23"
                    android:onClick="updateBtn"/>

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bn24"
                    android:onClick="deleteBtn"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bn1"
                android:onClick="back"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="top">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/view10"
            android:gravity="center"
            android:textColorHint="@android:color/holo_blue_light"/>

        <EditText
            android:id="@+id/editTextGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/view11"
            android:gravity="center"
            android:textColorHint="@android:color/holo_blue_light"/>

        <Button
            android:id="@+id/btnAddInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bn25"
            android:onClick="addInfo"/>

        <EditText
            android:id="@+id/editTextKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/view12"
            android:gravity="center"
            android:textColorHint="#ffb6c1"/>

        <Button
            android:id="@+id/btnFindInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bn26"
            android:onClick="searchInfo"/>

        <Button
            android:id="@+id/btnDeleteInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bn27"
            android:onClick="deleteLastInfo"/>

        <!--设置使用黄色的分隔条-->
        <ListView
            android:id="@+id/listViewShow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#ff0"
            android:dividerHeight="1dp"
            android:headerDividersEnabled="false"/>
    </LinearLayout>
</LinearLayout>