<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/textBox1111"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/view8"/>

        <EditText
            android:id="@+id/textBox2222"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/view9"/>

        <Button
            android:id="@+id/bn2222"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bn20"
            android:onClick="insertData"/>

        <Button
            android:id="@+id/bn1111"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bn1"
            android:onClick="back"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="bottom|center_horizontal">

        <!--设置使用蓝色的分隔条-->
        <ListView
            android:id="@+id/listView1111"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#0ff"
            android:dividerHeight="1dp"
            android:headerDividersEnabled="false"/>
    </LinearLayout>

</LinearLayout>